Wed Jun 28 09:30:09 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* cygwin/GNUmakefile: add $(LIBS).

Tue Jun 27 22:38:15 2000  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb, smtp.rb, pop.rb, http.rb: 1.1.24.

	* lib/net/protocol.rb: modified each_crlf_line again.

	* lib/net/protocol.rb: do_write_beg,do_write_end -> writing{}
	  do_write_do -> do_write

	* lib/net/http.rb: can make proxy connection by passing
	  addresses to HTTP.new, start.

	* lib/net/http.rb: HTTP.new_implementation, old_implementation:
	  can use 1.2 implementation of head, get, post, put.
	  (see document)

Tue Jun 27 12:05:10 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* win32.c (myfdclr): new function.

	* win32.h: add FD_CLR.

Mon Jun 26 22:20:03 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* win32/win32.c (is_socket, extract_file_fd): New function.

	* win32/win32.c (myfdopen): use is_socket().

	* win32/win32.c (myselect): return non socket files immediately
	  if file and socket handles are mixed.

Sun Jun 25 00:55:03 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* ext/socket/socket.c (sock_s_getnameinfo): `res' would not
	  be assigned if TYPE(sa) == T_STRING.

Sat Jun 24 19:02:34 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* stable version 1.4.5 released.

Fri Jun 23 22:34:51 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* bignum.c (rb_big_lshift): reorder xds assignment to avoid
	  reusing `x' as `len' by VC++ 6.0 SP3 compiler with -Ox switch.

Fri Jun 23 01:11:27 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (new_super): should tweak block_pass node for super too.

Wed Jun 21 22:20:34 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* configure.in: support for gcc version 2.95.2 19991024 (release-2)
	  on cygwin 1.1.2 or later.

Tue Jun 20 15:07:39 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* lib/parsedate.rb: don't seek year too greedy.

Tue Jun 20 06:14:43 2000  Wakou Aoyama <wakou@fsinet.or.jp>
